Remove jjwt special exception that was needed for v0.12