@@ -109,9 +109,6 @@ tasks {
   }
 
   test {
-    // required for jjwt 0.12 - see https://github.com/jwtk/jjwt/issues/849
-    jvmArgs("--add-exports", "java.base/sun.security.util=ALL-UNNAMED")
-
     finalizedBy(jacocoTestReport)
   }
 
